--- a/agent-install/ansible/vars.yml
+++ b/agent-install/ansible/vars.yml
@@ -2,12 +2,12 @@ HZN_EXCHANGE_USER_AUTH: "iamapikey:gXBgsigvNJG7Cumke9IWOB2e6XVfIxQXwaCLFmI6MU7Y"
 HZN_ORG_ID: "ieam-org"
 HZN_FSS_CSSURL: "https://cp-console.ieam-cluster-06435af99d581a900d8e1b161b029d87-0000.us-east.containers.appdomain.cloud/edge-css/"
 AGENT_NAMESPACE: "openhorizon-agent"
-EDGE_CLUSTER_STORAGE_CLASS: "ocs-storagecluster-cephfs"
-K8S_AUTH_HOST: "https://c115-e.us-south.containers.cloud.ibm.com:30184"
+EDGE_CLUSTER_STORAGE_CLASS: "ibmc-vpc-block-10iops-tier"
+K8S_AUTH_HOST: "https://c118-e.us-south.containers.cloud.ibm.com:32473"
 K8S_AUTH_USERNAME: ""
 K8S_AUTH_PASSWORD: ""
-K8S_AUTH_TOKEN: "sha256~U9AonMusmisHGipsEwj1Ke0WDzfhBGcP3DjaIF4LTrs"
+K8S_AUTH_TOKEN: "sha256~V525mVGl8XkljaQ3yCr7yJUwZTeKTjEZzW_zvJm3Lj4 "
 OCP_USER: "ocp-user-admin"
 HZN_AGENT_PORT: 8510
 HZN_EXCHANGE_URL: "https://cp-console.ieam-cluster-06435af99d581a900d8e1b161b029d87-0000.us-east.containers.appdomain.cloud/edge-exchange/v1/"
-HZN_NODE_ID: "walgreens-cluster-arizona"
+HZN_NODE_ID: "walgreens-cluster-texas"
